[package]
name = "png-to-terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbx_binary = "0.6.6"
rbx_dom = "0.1.0"
rbx_types = "1.4.2"
rbx_xml = "0.12.4"
serde = "1.0.152"
serde-xml-rs = "0.6.0"
serde_json = "1.0.91"
xmltree = "0.10.3"
