[package]
name = "png-to-terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.27.1"
rbx_binary = "0.6.6"
rbx_dom = "0.1.0"
rbx_dom_weak = "2.4.0"
rbx_types = "1.4.2"
rbx_xml = "0.12.4"
serde_json = "1.0.91"
